hphp/hack/test/typecheck/yield/asyncgen3.php.exp
File "asyncgen3.php", line 8, characters 8-18:
`await` can only be used inside `async` functions (NastCheck[3003])
File "asyncgen3.php", line 7, characters 15-47:
Invalid return type (Typing[4110])
  File "asyncgen3.php", line 7, characters 15-47:
  Expected `AsyncGenerator<int, string, void>`
  File "asyncgen3.php", line 7, characters 15-47:
  But got `Generator<[unresolved], [unresolved], [unresolved]>` (result of function containing a `yield`)
